<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayCtg">

    <TextView
        android:id="@+id/Word"
        android:layout_width="219dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/spelen"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Answer1"
        android:layout_width="182dp"
        android:layout_height="165dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Word"
        app:srcCompat="@drawable/amazighlogo2" />

    <ImageView
        android:id="@+id/Answer2"
        android:layout_width="186dp"
        android:layout_height="162dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer1"
        app:srcCompat="@drawable/amazighlogo2"
        android:contentDescription="@string/spelen"
        />


    <ImageView
        android:id="@+id/Answer3"
        android:layout_width="188dp"
        android:layout_height="166dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/spelen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Answer1"
        app:layout_constraintTop_toBottomOf="@+id/Word"
        app:srcCompat="@drawable/amazighlogo2" />

    <ImageView
        android:id="@+id/Answer4"
        android:layout_width="191dp"
        android:layout_height="161dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer3"
        app:srcCompat="@drawable/amazighlogo2"
        android:contentDescription="@string/spelen"
        />

    <Button
        android:id="@+id/terugBtn"
        android:layout_width="127dp"
        android:layout_height="60dp"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="52dp"
        android:text="@string/terug"
        android:background="@color/puke"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/spelen"
        />

    <Button
        android:id="@+id/catogorieBtn"
        android:layout_width="67dp"
        android:layout_height="64dp"
        android:background="@color/NoBackground"
        android:text="@string/terugIcon"
        android:textColor="@color/puke"
        android:textSize="44sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/volgendeBtn"
        android:layout_width="127dp"
        android:layout_height="60dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="52dp"
        android:background="@color/puke"
        android:textColor="@color/colorWhite"
        android:text="@string/Volgende"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/soundTxt"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="44dp"
        android:text="@string/soundText"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/terugBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/soundBtn"
        android:layout_width="119dp"
        android:layout_height="86dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="36dp"
        android:background="@color/NoBackground"
        android:text="@string/soundButton"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/terugBtn"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>